src/snapshots/bminor__parser__test__assignment_expression.snap
---
source: src/parser.rs
expression: "parse_expression(\"x = a && b\")"
---
Ok(
    Assignment {
        target: Variable {
            name: Token {
                kind: Identifier,
                lexeme: "x",
                line: 0,
            },
        },
        value: Logical {
            left: Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "a",
                    line: 0,
                },
            },
            operator: Token {
                kind: And,
                lexeme: "&&",
                line: 0,
            },
            right: Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "b",
                    line: 0,
                },
            },
        },
    },
)
