src/snapshots/bminor__parser__test__call_expression-3.snap
---
source: src/parser.rs
expression: "parse_expression(\"x(a, 1))\")"
---
Ok(
    Call {
        target: Token {
            kind: Identifier,
            lexeme: "x",
            line: 0,
        },
        args: [
            Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "a",
                    line: 0,
                },
            },
            Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
                kind: Integer,
            },
        ],
    },
)
