src/snapshots/bminor__parser__test__call_expression-5.snap
---
source: src/parser.rs
expression: "parse_expression(\"x(a, 1, y = 2, z(g()))\")"
---
Ok(
    Call {
        name: Token {
            kind: Identifier,
            lexeme: "x",
            line: 0,
        },
        args: [
            Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "a",
                    line: 0,
                },
            },
            Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
                kind: Integer,
            },
            Assignment {
                target: Token {
                    kind: Identifier,
                    lexeme: "y",
                    line: 0,
                },
                value: Literal {
                    value: Token {
                        kind: IntegerLiteral,
                        lexeme: "2",
                        line: 0,
                    },
                    kind: Integer,
                },
            },
            Call {
                name: Token {
                    kind: Identifier,
                    lexeme: "z",
                    line: 0,
                },
                args: [
                    Call {
                        name: Token {
                            kind: Identifier,
                            lexeme: "g",
                            line: 0,
                        },
                        args: [],
                    },
                ],
            },
        ],
    },
)
