src/snapshots/bminor__parser__test__declaration_statement-16.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [1] integer = {1,\n            2,\n            3\n        };\")"
---
Ok(
    VariableDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "arr",
            line: 0,
        },
        variable_type: Array {
            kind: Integer,
            size: Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
                kind: Integer,
            },
            initializer: Some(
                [
                    Literal {
                        value: Token {
                            kind: IntegerLiteral,
                            lexeme: "1",
                            line: 0,
                        },
                        kind: Integer,
                    },
                    Literal {
                        value: Token {
                            kind: IntegerLiteral,
                            lexeme: "2",
                            line: 1,
                        },
                        kind: Integer,
                    },
                    Literal {
                        value: Token {
                            kind: IntegerLiteral,
                            lexeme: "3",
                            line: 2,
                        },
                        kind: Integer,
                    },
                ],
            ),
        },
    },
)
