src/snapshots/bminor__parser__test__declaration_statement-17.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [1] char;\")"
---
Ok(
    VariableDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "arr",
            line: 0,
        },
        variable_type: Array {
            kind: Char,
            size: Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
                kind: Integer,
            },
            initializer: None,
        },
    },
)
