src/snapshots/bminor__parser__test__declaration_statement-18.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [1] boolean;\")"
---
Ok(
    VariableDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "arr",
            line: 0,
        },
        variable_type: Array {
            kind: Token {
                kind: Boolean,
                lexeme: "boolean",
                line: 0,
            },
            size: Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
            },
            initializer: None,
        },
    },
)
